Cascading Change Log

3.1.2 [unreleased]

3.1.1

  Fixed issue with the MapReduce planner where a c.p.Checkpoint after a c.p.GroupBy merge would fail the planner.

3.1.0

  Fixed issue where Hadoop throws an NPE when polling for the current job state making the state polling loop unstable.

  Prevent c.t.h.Hfs and c.t.h.Lfs from setting the current configuration into stand-alone mode when running
  cluster-side and Hfs or Lfs are used to read/write data from within an operation or internally. This has historically
  had no other effect than emitting a confusing log message on the cluster slaves.

  Updated Apache Hadoop 2 based sub-projects to 2.7.2.

  Updated Apache Tez to 0.8.2.

  Updated jgrapht to 0.9.2.

  Fixed an issue on Apache MapReduce 1.x where an NPE will be thrown when fetching slice level counters on a map only
  job and the c.a.h.m.TaskCompletionEvent falsely identifies itself as a reducer task event.

  Fixed issue where c.m.a.URISanitizer would fail parsing Windows path names.

  Fixed issue where local mode could deadlock across multiple c.p.HashJoin or c.p.CoGroup instances in some situations.

  Fixed issue on Apache MapReduce platform that caused planner failures when merging the results of two c.p.GroupBy
  pipes via a single c.p.Merge pipe.

  Fixed issue on Apache Tez platform that prevented additional clean up of Hadoop created meta-data files on c.f.Flow
  completion.

  Updated c.m.a.URISanitizer to treat opaque URIs differently than hierarchical URIs by hiding the scheme specific
  parts in PUBLIC and PROTECTED visibility and storing the full URI for PRIVATE.

  Updated c.t.p.BasePartitionTap and subsequent PartitionTap sub-classes to allow for partition filters by providing
  one or more c.t.Fields argument selector and c.o.Filter instance pairs.

  Fixed issue on Apache Tez that did not create a proper vertex edge on a split in the pipe assembly under some
  circumstances.
